examples/test/testpolicy5259.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5259
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key39: value14
      key3: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value12
          key5: value47
          key11: value48
      podSelector:
        matchLabels:
          key31: value34
